# api/src/api.js
@@ -3,14 +3,14 @@ const app = express();
 const cors = require('cors');
 const client = require('./config/psqlClient');
 const humans = require('./routes/humans');
-// const proplabels = require('./routes/proplabels');
-// const entlabels = require('./routes/entlabels');
+const proplabels = require('./routes/proplabels');
+const entlabels = require('./routes/entlabels');
 
 app.use(express.json());
 app.use(cors());
 app.use("/api/humans", humans);
-// app.use("/api/proplabels", proplabels);
-// app.use("/api/entlabels", entlabels);
+app.use("/api/proplabels", proplabels);
+app.use("/api/entlabels", entlabels);
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 
